--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,14 @@
         "php": ">=8.1",
         "psr/log": "^3.0",
         "psr/http-client": "^1.0",
-        "psr/container": "^2.0"
+        "psr/container": "^2.0",
+        "psr/http-factory": "^1.1"
     },
     "require-dev": {
         "vimeo/psalm": "*",
         "phpunit/phpunit": "^9.6",
-        "yiisoft/di": "^1.2"
+        "yiisoft/di": "^1.2",
+        "guzzlehttp/guzzle": "^7.8",
+        "monolog/monolog": "^3.6"
     }
 }
